fix: not full width on mobile

--- a/src/Block/variations/less/side-menu.less
+++ b/src/Block/variations/less/side-menu.less
@@ -68,7 +68,6 @@
 }
 
 .eea-side-menu {
-  max-width: 300px;
   grid-area: toc;
 
   &:not(.mobile) {
@@ -134,13 +133,6 @@
     right: unset;
     width: 100% !important;
   }
-}
-
-.eea-side-menu.mobile {
-  position: unset;
-  top: unset !;
-  right: unset;
-  width: 100% !important;
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
